dbmigrations

(MydjangoEnv2) C:\Users\Admin\django_lectures\first_project>python manage.py mig
rate
Operations to perform:
  Apply all migrations: admin, auth, contenttypes, sessions
Running migrations:
  Applying contenttypes.0001_initial... OK
  Applying auth.0001_initial... OK
  Applying admin.0001_initial... OK
  Applying admin.0002_logentry_remove_auto_add... OK
  Applying contenttypes.0002_remove_content_type_name... OK
  Applying auth.0002_alter_permission_name_max_length... OK
  Applying auth.0003_alter_user_email_max_length... OK
  Applying auth.0004_alter_user_username_opts... OK
  Applying auth.0005_alter_user_last_login_null... OK
  Applying auth.0006_require_contenttypes_0002... OK
  Applying auth.0007_alter_validators_add_error_messages... OK
  Applying auth.0008_alter_user_username_max_length... OK
  Applying sessions.0001_initial... OK

(MydjangoEnv2) C:\Users\Admin\django_lectures\first_project>python manage.py mak
emigration first_app
Unknown command: 'makemigration'
Type 'manage.py help' for usage.

(MydjangoEnv2) C:\Users\Admin\django_lectures\first_project>python manage.py mig
rate
Operations to perform:
  Apply all migrations: admin, auth, contenttypes, sessions
Running migrations:
  No migrations to apply.

(MydjangoEnv2) C:\Users\Admin\django_lectures\first_project>python manage.py she
ll
Python 3.5.6 |Anaconda, Inc.| (default, Aug 26 2018, 16:05:27) [MSC v.1900 64 bi
t (AMD64)] on win32
Type "help", "copyright", "credits" or "license" for more information.
(InteractiveConsole)
>>> print('hello')
hello
>>> from first_app.models import Topic
Traceback (most recent call last):
  File "<console>", line 1, in <module>
  File "C:\Users\Admin\django_lectures\first_project\first_app\models.py", line
4, in <module>
    class Topic(models.Model):
  File "C:\Users\Admin\Anaconda3\envs\MydjangoEnv2\lib\site-packages\django\db\m
odels\base.py", line 113, in __new__
    "INSTALLED_APPS." % (module, name)
RuntimeError: Model class first_app.models.Topic doesn't declare an explicit app
_label and isn't in an application in INSTALLED_APPS.
>>> from first_app.models import Topic
Traceback (most recent call last):
  File "<console>", line 1, in <module>
  File "C:\Users\Admin\django_lectures\first_project\first_app\models.py", line
4, in <module>
    class Topic(models.Model):
  File "C:\Users\Admin\Anaconda3\envs\MydjangoEnv2\lib\site-packages\django\db\m
odels\base.py", line 113, in __new__
    "INSTALLED_APPS." % (module, name)
RuntimeError: Model class first_app.models.Topic doesn't declare an explicit app
_label and isn't in an application in INSTALLED_APPS.
>>> print('hello')
hello
>>> from first_app.models import Topic print(Topic.objects.all())
  File "<console>", line 1
    from first_app.models import Topic print(Topic.objects.all())
                                           ^
SyntaxError: invalid syntax
>>>
Traceback (most recent call last):
  File "manage.py", line 22, in <module>
    execute_from_command_line(sys.argv)
  File "C:\Users\Admin\Anaconda3\envs\MydjangoEnv2\lib\site-packages\django\core
\management\__init__.py", line 367, in execute_from_command_line
    utility.execute()
  File "C:\Users\Admin\Anaconda3\envs\MydjangoEnv2\lib\site-packages\django\core
\management\__init__.py", line 359, in execute
    self.fetch_command(subcommand).run_from_argv(self.argv)
  File "C:\Users\Admin\Anaconda3\envs\MydjangoEnv2\lib\site-packages\django\core
\management\base.py", line 294, in run_from_argv
    self.execute(*args, **cmd_options)
  File "C:\Users\Admin\Anaconda3\envs\MydjangoEnv2\lib\site-packages\django\core
\management\base.py", line 357, in execute
    translation.activate(saved_locale)
  File "C:\Users\Admin\Anaconda3\envs\MydjangoEnv2\lib\site-packages\django\util
s\translation\__init__.py", line 161, in activate
    return _trans.activate(language)
  File "C:\Users\Admin\Anaconda3\envs\MydjangoEnv2\lib\site-packages\django\util
s\translation\__init__.py", line 58, in __getattr__
    from django.utils.translation import trans_real as trans
  File "<frozen importlib._bootstrap>", line 995, in _handle_fromlist
KeyboardInterrupt

(MydjangoEnv2) C:\Users\Admin\django_lectures\first_project>python manage.py mak
emirations first_app
Unknown command: 'makemirations'
Type 'manage.py help' for usage.

(MydjangoEnv2) C:\Users\Admin\django_lectures\first_project>python manage.py mak
emigrations first_app
App 'first_app' could not be found. Is it in INSTALLED_APPS?

(MydjangoEnv2) C:\Users\Admin\django_lectures\first_project>python manage.py mak
emigrations first_app
Migrations for 'first_app':
  first_app\migrations\0001_initial.py:
    - Create model AccessRecord
    - Create model Topic
    - Create model Webpage
    - Add field name to accessrecord

(MydjangoEnv2) C:\Users\Admin\django_lectures\first_project>python manage.py mig
rate
Operations to perform:
  Apply all migrations: admin, auth, contenttypes, first_app, sessions
Running migrations:
  Applying first_app.0001_initial... OK

(MydjangoEnv2) C:\Users\Admin\django_lectures\first_project>python manage.py mig
rate
Operations to perform:
  Apply all migrations: admin, auth, contenttypes, first_app, sessions
Running migrations:
  No migrations to apply.

(MydjangoEnv2) C:\Users\Admin\django_lectures\first_project>python manage.py she
ll
Python 3.5.6 |Anaconda, Inc.| (default, Aug 26 2018, 16:05:27) [MSC v.1900 64 bi
t (AMD64)] on win32
Type "help", "copyright", "credits" or "license" for more information.
(InteractiveConsole)
>>> print('hello')
hello
>>> from first_app.models import Topic
>>> print(Topic.objects.all())
<QuerySet []>
>>> t = Topic(top_name="Social Network")
>>> t.save()
>>> print(Topic.object.all())
Traceback (most recent call last):
  File "<console>", line 1, in <module>
AttributeError: type object 'Topic' has no attribute 'object'
>>> print(Topic.objects.all())
<QuerySet [<Topic: Social Network>]>
>>> quit()

(MydjangoEnv2) C:\Users\Admin\django_lectures\first_project>python manage.py cre
atesuperuser
Username (leave blank to use 'admin'): anup
Email address: sharmaanand086@gmail.com
Password:
Password (again):
Error: Your passwords didn't match.
Password:
Password (again):
Superuser created successfully.

(MydjangoEnv2) C:\Users\Admin\django_lectures\first_project>python manage.py run
server
Performing system checks...

System check identified no issues (0 silenced).
December 11, 2018 - 13:24:38
Django version 1.10.5, using settings 'first_project.settings'
Starting development server at http://127.0.0.1:8000/
Quit the server with CTRL-BREAK.
[11/Dec/2018 13:25:18] "GET /admin/ HTTP/1.1" 302 0
[11/Dec/2018 13:25:19] "GET /admin/login/?next=/admin/ HTTP/1.1" 200 1657
[11/Dec/2018 13:25:30] "POST /admin/login/?next=/admin/ HTTP/1.1" 302 0
[11/Dec/2018 13:25:30] "GET /admin/ HTTP/1.1" 200 4290
[11/Dec/2018 13:25:30] "GET /static/admin/css/dashboard.css HTTP/1.1" 200 434
[11/Dec/2018 13:25:31] "GET /static/admin/img/icon-addlink.svg HTTP/1.1" 200 331

[11/Dec/2018 13:25:31] "GET /static/admin/img/icon-changelink.svg HTTP/1.1" 200
380
[11/Dec/2018 13:25:31] "GET /static/admin/fonts/Roboto-Bold-webfont.woff HTTP/1.
1" 200 82564
[11/Dec/2018 13:25:39] "GET /admin/auth/user/add/ HTTP/1.1" 200 5165
[11/Dec/2018 13:25:39] "GET /admin/jsi18n/ HTTP/1.1" 200 3189
[11/Dec/2018 13:25:39] "GET /static/admin/css/forms.css HTTP/1.1" 200 7750
[11/Dec/2018 13:25:41] "GET /static/admin/js/core.js HTTP/1.1" 200 7976
[11/Dec/2018 13:25:41] "GET /static/admin/js/admin/RelatedObjectLookups.js HTTP/
1.1" 200 6577
[11/Dec/2018 13:25:41] "GET /static/admin/js/actions.js HTTP/1.1" 200 6501
[11/Dec/2018 13:25:41] "GET /static/admin/js/urlify.js HTTP/1.1" 200 8186
[11/Dec/2018 13:25:41] "GET /static/admin/js/jquery.init.js HTTP/1.1" 200 363
[11/Dec/2018 13:25:41] "GET /static/admin/js/vendor/jquery/jquery.js HTTP/1.1" 2
00 258648
[11/Dec/2018 13:25:41] "GET /static/admin/js/prepopulate.js HTTP/1.1" 200 1538
[11/Dec/2018 13:25:41] "GET /static/admin/js/prepopulate_init.js HTTP/1.1" 200 4
95
[11/Dec/2018 13:25:41] "GET /static/admin/css/widgets.css HTTP/1.1" 200 10340
[11/Dec/2018 13:25:41] "GET /static/admin/js/change_form.js HTTP/1.1" 200 698
[11/Dec/2018 13:25:41] "GET /static/admin/js/vendor/xregexp/xregexp.js HTTP/1.1"
 200 128820
[11/Dec/2018 13:25:46] "GET /admin/ HTTP/1.1" 200 4290
